--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -1,1 +1,24 @@
-{"name":"gateway-service","version":"1.0.0","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"keywords":[],"author":"","license":"ISC","description":""}
+{
+  "name": "gateway-service",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gateway": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "firebase-admin": "13.3.0",
+    "axios": "1.8.4",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.10"
+  }
+}
