--- a/transaction-service/package.json
+++ b/transaction-service/package.json
@@ -1,1 +1,27 @@
-{"name":"transaction-service","version":"1.0.0","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"keywords":[],"author":"","license":"ISC","description":""}
+{
+  "name": "transaction-service",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "transaction-service": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "amqplib": "0.10.7",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "5.1.0",
+    "firebase-admin": "13.3.0",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.13.2",
+    "morgan": "1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.9"
+  }
+}
