--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase-admin": "13.3.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.13.2",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "winston": "3.17.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
