--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "fintrack-be",
   "module": "index.js",
-  "type": "module",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node --no-warnings --experimental-specifier-resolution=node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "amqplib": "0.10.7",
     "cors": "2.8.5",
@@ -11,6 +15,7 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.13.2",
     "morgan": "1.10.0",
+    "multer": "1.4.5-lts.2",
     "winston": "3.17.0"
   },
   "devDependencies": {
