--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "node --no-warnings --experimental-specifier-resolution=node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "amqplib": "0.10.7",
@@ -20,7 +21,12 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "nodemon": "3.1.9"
+    "chai": "5.2.0",
+    "jest": "29.7.0",
+    "mocha": "11.1.0",
+    "mongoose-mock": "0.4.0",
+    "nodemon": "3.1.9",
+    "supertest": "7.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
