--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/fintrack_db
-      - PORT=3000
+      - ./shared/firebase:/app/shared/firebase # Menambahkan volume untuk kredensial Firebase
+    env_file:
+      - .env
     depends_on:
       - mongo
     networks:
