--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "amqplib": "0.10.7",
+    "bcrypt": "^6.0.0",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "5.1.0",
+    "express-validator": "^7.2.1",
     "firebase-admin": "13.3.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.13.2",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "winston": "3.17.0"
   },
   "devDependencies": {
@@ -27,8 +30,5 @@
     "mongoose-mock": "0.4.0",
     "nodemon": "3.1.9",
     "supertest": "7.1.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
   }
 }
