--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   app:
     build:
@@ -17,7 +16,7 @@ services:
       - app-network
 
   mongo:
-    image: mongo:latest
+    image: mongo:6
     container_name: mongo
     ports:
       - "27017:27017"
