--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "module": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node --no-warnings --experimental-specifier-resolution=node index.js",
     "dev": "nodemon index.js",
+    "start": "bun index.js",
     "test": "mocha"
   },
   "dependencies": {
