--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,22 @@ services:
     build: .
     container_name: node_app
     ports:
-      - "3000:3000"
+      # Memetakan port eksternal 4000 ke port internal 4000
+      - "4000:4000"
     environment:
+      # Langsung mengatur PORT di sini untuk konsistensi
+      - PORT=4000
       - MONGO_URI=${MONGO_URI}
       - NODE_ENV=${NODE_ENV}
-      - PORT=${PORT}
       - EMAIL_USER=${EMAIL_USER}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
+      - REFRESH_TOKEN_SECRET=${REFRESH_TOKEN_SECRET}
     depends_on:
       - mongo
+    restart: unless-stopped # Tambahan: Otomatis restart jika kontainer berhenti
+    networks:
+      - fintrack-net
 
   mongo:
     image: mongo:6
@@ -22,7 +29,14 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    restart: unless-stopped # Tambahan: Otomatis restart jika kontainer berhenti
+    networks:
+      - fintrack-net
 
 volumes:
   mongo_data:
     driver: local
+
+networks:
+  fintrack-net:
+    driver: bridge
