--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "13.3.0",
+    "json2csv": "6.0.0-alpha.2",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.13.2",
     "morgan": "1.10.0",
